...
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:tint="?attr/colorOnSurfaceVariant" />

	<ImageView
			android:id="@+id/btnDismiss"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_centerInParent="true"
			android:contentDescription="@android:string/cancel"
			android:elevation="4dp"
			android:minWidth="@dimen/dismissButtonMinSize"
...
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:srcCompat="@drawable/ic_cancel"
			app:tint="?attr/colorOnSurfaceVariant" />

	<Button
			android:id="@+id/btnRepeat"
			style="@style/Widget.Material3.Button.TextButton"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/action_repeat"
			android:textSize="24sp"
			app:layout_constraintBottom_toBottomOf="parent"
...
