...
				style="@style/AppTheme.Label"
				android:text="@string/to"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />

		<NumberPicker
				android:id="@+id/maxHours"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginStart="32dp"
				app:layout_constraintEnd_toStartOf="@id/maxMin"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
...
				app:layout_constraintTop_toTopOf="@id/maxHours" />

		<NumberPicker
				android:id="@+id/maxMin"
				android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				app:layout_constraintEnd_toStartOf="@id/maxSec"
				app:layout_constraintStart_toEndOf="@id/maxHours"
				app:layout_constraintTop_toTopOf="parent" />

		<TextView
				android:id="@+id/tvMinMin"
				android:layout_width="wrap_content"
...
