<?xml version="1.0" encoding="utf-8"?>
<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
		android:id="@+id/rvBookmarks"
		android:layout_width="match_parent"
		android:layout_height="match_parent" />