<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:orientation="vertical"
		android:paddingStart="@dimen/activityPaddingHorizontal"
		android:paddingTop="@dimen/activityPaddingVertical"
		android:paddingEnd="@dimen/activityPaddingHorizontal"
		android:paddingBottom="@dimen/activityPaddingVertical">

	<TextView
			style="@style/AppTheme.Description"
			android:text="@string/random_ticker_introduction" />

	<LinearLayout style="@style/AppTheme.BookmarksContainer">

		<include
				android:id="@+id/bookmarks"
				layout="@layout/content_bookmarks" />

	</LinearLayout>

	<include
			android:id="@+id/contentMin"
			layout="@layout/content_minimum_value" />

	<include
			android:id="@+id/contentMax"
			layout="@layout/content_maximum_value"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_marginTop="@dimen/contentPadding" />

	<CheckBox
			android:id="@+id/cbAutoRepeat"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:text="@string/auto_repeat" />

	<Button
			android:id="@+id/btnStartTicker"
			style="@style/AppTheme.Button"
			android:text="@string/start_button" />
</LinearLayout>