<?xml version="1.0" encoding="utf-8"?>
<MotionScene xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto">

	<ConstraintSet android:id="@+id/waiting">
		<Constraint android:id="@+id/laWaiting" />
		<Constraint android:id="@+id/tvElapsedTime" />
		<Constraint android:id="@+id/btnRepeat" />
	</ConstraintSet>

	<ConstraintSet android:id="@+id/ringing">
		<Constraint
				android:id="@id/laWaiting"
				android:alpha="0"
				android:scaleX="0"
				android:scaleY="0"
				android:visibility="gone"
				app:layout_constraintBottom_toBottomOf="@+id/tvElapsedTime"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent" />
		<Constraint
				android:id="@id/tvElapsedTime"
				app:layout_constraintBottom_toTopOf="@id/btnRepeat"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent"
				app:layout_constraintTop_toTopOf="parent">
			<CustomAttribute
					app:attributeName="textSize"
					app:customDimension="@dimen/elapsedTimeTextSizeZoomed" />
		</Constraint>
		<Constraint
				android:id="@id/btnRepeat"
				android:layout_height="48dp"
				app:layout_constraintBottom_toTopOf="@id/guideline"
				app:layout_constraintEnd_toEndOf="parent"
				app:layout_constraintStart_toStartOf="parent" />

	</ConstraintSet>

	<Transition
			app:constraintSetEnd="@id/ringing"
			app:constraintSetStart="@+id/waiting"
			app:duration="500" />
</MotionScene>