<?xml version="1.0" encoding="utf-8"?>
<merge xmlns:android="http://schemas.android.com/apk/res/android"
       xmlns:tools="http://schemas.android.com/tools"
       tools:showIn="@layout/activity_main">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/minimum_time"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <LinearLayout
        style="@style/Interval.Container">

        <EditText
            android:id="@+id/min_min"
            style="@style/Interval.EditText"/>

        <TextView
            style="@style/Interval.Unit"
            android:labelFor="@+id/min_min"
            android:text="@string/abbrev_minute"/>

        <EditText
            android:id="@+id/min_sec"
            style="@style/Interval.EditText"
            tools:text="01"/>

        <TextView
            style="@style/Interval.Unit"
            android:labelFor="@+id/min_sec"
            android:text="@string/abbrev_second"/>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/maximum_time"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>

    <LinearLayout
        style="@style/Interval.Container">

        <EditText
            android:id="@+id/max_min"
            style="@style/Interval.EditText"/>

        <TextView
            style="@style/Interval.Unit"
            android:labelFor="@+id/max_min"
            android:text="@string/abbrev_minute"/>

        <EditText
            android:id="@+id/max_sec"
            android:imeOptions="actionDone"
            style="@style/Interval.EditText"/>

        <TextView
            style="@style/Interval.Unit"
            android:labelFor="@+id/max_sec"
            android:text="@string/abbrev_second"/>

    </LinearLayout>
</merge>