<?xml version="1.0" encoding="utf-8"?>
<pl.bclogic.pulsator4droid.library.PulsatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pulsator"
    android:layout_width="160dp"
    android:layout_height="160dp"
    android:layout_alignParentBottom="true"
    android:layout_centerHorizontal="true"
    android:layout_gravity="center_horizontal"
    android:gravity="center"
    app:pulse_color="@color/dismissColor"
    app:pulse_count="4"
    app:pulse_duration="4000"
    app:pulse_interpolator="Linear"
    app:pulse_repeat="0"
    app:pulse_startFromScratch="true">

    <ImageView
        android:id="@+id/dismiss_button"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_centerInParent="true"
        android:background="@drawable/ic_cancel_filler"
        android:contentDescription="@android:string/cancel"
        android:src="@drawable/ic_cancel"
        android:tint="@color/dismissColor"/>
</pl.bclogic.pulsator4droid.library.PulsatorLayout>